Fix issue in BX execution